<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/include_navi" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

    <RadioGroup
        android:id="@+id/rg_pets_all"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/rb_store_pets_day"
            style="@style/TopTabStyle"
            android:text="@string/store_day" />

        <RadioButton
            android:id="@+id/rb_store_pets_food"
            style="@style/TopTabStyle"
            android:text="@string/store_pets_food" />

        <RadioButton
            android:id="@+id/rb_store_pets_toys"
            style="@style/TopTabStyle"
            android:text="@string/store_pets_toys" />

        <RadioButton
            android:id="@+id/rb_store_pets_clothes"
            style="@style/TopTabStyle"
            android:text="@string/store_pets_clothes" />

        <RadioButton
            android:id="@+id/rb_store_pets_docteor"
            style="@style/TopTabStyle"
            android:text="@string/store_pets_docteor" />
    </RadioGroup>

    <android.support.v4.view.ViewPager
        android:id="@+id/vp_store_fragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

    </android.support.v4.view.ViewPager>


    </LinearLayout>
</LinearLayout>
